--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<div class="btn-group" data-toggle="buttons">
 			
    			 <label class="btn btn-default active form-check-label">
+   			 	<img class="img-fluid" src="" alt=""> 
    			     <input class="form-check-input" type="radio" autocomplete="off"> radio 1 (pre-checked)
    			 </label>
 			
