--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 
 			<h1>President</h1>
 			<hr />
-			<div class="btn-group" data-toggle="buttons">
+			<div class="btn-group">
 			
-   			 <label class="btn btn-default active form-check-label">
+   			 <label class="btn btn-success">
    			 	<img class="img-fluid" src="" alt=""> 
-   			     <input class="form-check-input" type="radio" autocomplete="off"> radio 1 (pre-checked)
+   			     <input class="form-control" type="radio" autocomplete="off"> radio 1
    			 </label>
 			
-   			 <label class="btn btn-default form-check-label">
-   			     <input class="form-check-input" type="radio" autocomplete="off"> radio 2
+   			 <label class="btn btn-success">
+   			     <input class="form-control" type="radio" autocomplete="off"> radio 2
    			 </label>
 			
-   			 <label class="btn btn-default form-check-label">
-  			      <input class="form-check-input" type="radio" autocomplete="off"> radio 3
+   			 <label class="btn btn-success">
+  			      <input class="form-control" type="radio" autocomplete="off"> radio 3
   			  </label>
   			</div>
 	</div>
